@@ -57,6 +57,7 @@ importFrom(Rsamtools,scanFa)
 importFrom(Rsamtools,scanFaIndex)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,expand)
+importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
 importFrom(SummarizedExperiment,rowRanges)
@@ -106,6 +107,7 @@ importFrom(graphics,symbols)
 importFrom(graphics,text)
 importFrom(rtracklayer,import)
 importFrom(stats,C)
+importFrom(stats,aggregate)
 importFrom(stats,complete.cases)
 importFrom(stats,cutree)
 importFrom(stats,dbeta)
